--- a/CSS/table.css
+++ b/CSS/table.css
@@ -1,9 +1,11 @@
-td{
+td
+{
     align-content: center;
     background: #000000;
     padding: 100px;
 }
-tr{
+tr
+{
     font-size: 25px;
     color: #FfFFFf;
 }
